--- a/package.json
+++ b/package.json
@@ -1,7 +1,34 @@
 {
+  "name": "requestarr",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "dependencies": {
+    "asynckit": "^0.4.0",
     "axios": "^1.7.9",
-    "discord.js": "^14.16.3",
-    "dotenv": "^16.4.7"
-  }
+    "combined-stream": "^1.0.8",
+    "delayed-stream": "^1.0.0",
+    "discord-api-types": "^0.37.100",
+    "discord.js": "^14.18.0",
+    "dotenv": "^16.4.7",
+    "fast-deep-equal": "^3.1.3",
+    "follow-redirects": "^1.15.9",
+    "form-data": "^4.0.1",
+    "lodash": "^4.17.21",
+    "lodash.snakecase": "^4.1.1",
+    "magic-bytes.js": "^1.10.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "proxy-from-env": "^1.1.0",
+    "ts-mixer": "^6.0.4",
+    "tslib": "^2.8.1",
+    "undici": "^6.19.8",
+    "undici-types": "^6.20.0",
+    "ws": "^8.18.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
