--- a/package.json
+++ b/package.json
@@ -12,23 +12,35 @@
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
     "fast-deep-equal": "^3.1.3",
+    "figlet": "^1.8.0",
     "follow-redirects": "^1.15.9",
     "form-data": "^4.0.1",
     "lodash": "^4.17.21",
     "lodash.snakecase": "^4.1.1",
+    "luxon": "^3.5.0",
     "magic-bytes.js": "^1.10.0",
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
+    "node-cron": "^3.0.3",
     "proxy-from-env": "^1.1.0",
+    "rimraf": "^6.0.1",
     "ts-mixer": "^6.0.4",
+    "tsc": "^2.0.4",
     "tslib": "^2.8.1",
+    "typescript": "^5.8.2",
     "undici": "^6.19.8",
     "undici-types": "^6.20.0",
     "ws": "^8.18.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "rimraf dist && tsc && node --no-warnings dist/index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/figlet": "^1.7.0",
+    "@types/luxon": "^3.4.2",
+    "@types/node-cron": "^3.0.11"
+  }
 }
