--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "ts-mixer": "^6.0.4",
     "tsc": "^2.0.4",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.2",
+    "typescript": "^5.8.3",
     "undici": "^6.19.8",
     "undici-types": "^6.20.0",
+    "winston": "^3.17.0",
     "ws": "^8.18.0"
   },
   "scripts": {
