--- a/package.json
+++ b/package.json
@@ -27,22 +27,23 @@
     "ts-mixer": "^6.0.4",
     "tsc": "^2.0.4",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.3",
     "undici": "^6.19.8",
     "undici-types": "^6.20.0",
     "winston": "^3.17.0",
     "ws": "^8.18.0"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf dist && tsc",
-    "start": "rimraf dist && npx tsc && node --no-warnings dist/index.js"
-  },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@types/figlet": "^1.7.0",
     "@types/luxon": "^3.4.2",
-    "@types/node-cron": "^3.0.11"
-  }
+    "@types/node-cron": "^3.0.11",
+    "eslint": "^9.26.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "rimraf dist && tsc && node --no-warnings dist/index.js"
+  },
+  "author": "",
+  "license": "ISC"
 }
