--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "proxy-from-env": "^1.1.0",
     "rimraf": "^6.0.1",
     "ts-mixer": "^6.0.4",
-    "tsc": "^2.0.4",
     "tslib": "^2.8.1",
     "undici": "^6.19.8",
     "undici-types": "^6.20.0",
@@ -36,14 +35,14 @@
     "@types/figlet": "^1.7.0",
     "@types/luxon": "^3.4.2",
     "@types/node-cron": "^3.0.11",
-    "eslint": "^9.26.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "rimraf dist && tsc && node --no-warnings dist/index.js"
   },
-  "author": "",
+  "author": "WaYy Tempest",
   "license": "ISC"
 }
