--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,11 @@
     "lib": ["ESNext"],
     "target": "ESNext",
     "module": "commonjs",
-    "moduleResolution": "node",
     "strict": true,
     "alwaysStrict": true,
     "outDir": "dist",
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true
+    "skipLibCheck": true
   },
   "include": ["src"],
   "exclude": ["dist/**/*", "node_modules/**/*"]
