--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,48 @@
-README.md
-LICENSE
-.drone.yml
+# Node modules
+node_modules
+
+# Build output
+/dist
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Git
+.git
+.gitignore
+
+# Environment & secrets
+.env
+.env.*
+
+# Docker
 Dockerfile
 docker-compose.yml
-assets
-LICENSE
-.gitignore
+
+# IDE/editor
+.vscode
+.idea
+*.swp
+
+# Tests/coverage
+coverage
+*.lcov
+
+# Misc
+*.tgz
+*.bak
+*.tmp
+
+# Local config
+*.local.*
