--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "figlet": "^1.8.0",
     "follow-redirects": "^1.15.9",
     "form-data": "^4.0.1",
+    "ioredis": "^5.6.1",
     "lodash": "^4.17.21",
     "lodash.snakecase": "^4.1.1",
     "luxon": "^3.5.0",
