--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,9 +1,7 @@
 name: "🐛 Bug Report"
 description: Create a new ticket for a bug.
 title: "🐛 [BUG] - <title>"
-labels: [
-  "bug"
-]
+labels: ["bug"]
 body:
   - type: textarea
     id: description
@@ -18,11 +16,6 @@ body:
     attributes:
       label: "Reproduction steps"
       description: Please enter an explicit description of your issue
-      value: |
-        1. Go to '...'
-        2. Click on '....'
-        3. Scroll down to '....'
-        4. See error
       render: bash
     validations:
       required: true
@@ -31,8 +24,6 @@ body:
     attributes:
       label: "Screenshots"
       description: If applicable, add screenshots to help explain your problem.
-      value: |
-        ![DESCRIPTION](LINK.png)
       render: bash
     validations:
       required: false
@@ -45,28 +36,13 @@ body:
     validations:
       required: false
   - type: dropdown
-    id: browsers
-    attributes:
-      label: "Browsers"
-      description: What browsers are you seeing the problem on ?
-      multiple: true
-      options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
-        - Opera
-    validations:
-      required: false
-  - type: dropdown
     id: os
     attributes:
       label: "OS"
-      description: What is the impacted environment ?
-      multiple: true
+      multiple: false
       options:
         - Windows
         - Linux
         - Mac
     validations:
-      required: false
+      required: true
