--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -11,14 +11,22 @@ body:
       placeholder: Short and explicit description of your incident...
     validations:
       required: true
+
   - type: textarea
     id: reprod
     attributes:
       label: "Reproduction steps"
       description: Please enter an explicit description of your issue
+    placeholder: |
+      Ex:
+      1. Open the app
+      2. Go to Settings
+      3. Click Save
+      4. Error appears
       render: bash
     validations:
       required: true
+
   - type: textarea
     id: screenshot
     attributes:
@@ -27,6 +35,7 @@ body:
       render: bash
     validations:
       required: false
+
   - type: textarea
     id: logs
     attributes:
@@ -35,6 +44,7 @@ body:
       render: bash
     validations:
       required: false
+
   - type: dropdown
     id: os
     attributes:
