--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -17,7 +17,12 @@ body:
     attributes:
       label: "Reproduction steps"
       description: Please enter an explicit description of your issue
-    render: bash
+      value: |
+        1. Go to '...'
+        2. Click on '....'
+        3. Scroll down to '....'
+        4. See error
+      render: bash
     validations:
       required: true
 
