--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "name": "requestarr",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "module": "src/index.ts",
+  "type": "module",
+  "devDependencies": {
+    "@types/bun": "latest",
+    "@types/figlet": "^1.7.0",
+    "@types/luxon": "^3.4.2",
+    "@types/node-cron": "^3.0.11",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
+  },
+  "peerDependencies": {
+    "typescript": "^5"
+  },
   "dependencies": {
+    "discord.js": "^14.21.0",
     "asynckit": "^0.4.0",
     "axios": "^1.7.9",
     "combined-stream": "^1.0.8",
     "delayed-stream": "^1.0.0",
     "discord-api-types": "^0.37.100",
-    "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
     "fast-deep-equal": "^3.1.3",
     "figlet": "^1.8.0",
@@ -31,13 +41,6 @@
     "undici-types": "^6.20.0",
     "winston": "^3.17.0",
     "ws": "^8.18.0"
-  },
-  "devDependencies": {
-    "@types/figlet": "^1.7.0",
-    "@types/luxon": "^3.4.2",
-    "@types/node-cron": "^3.0.11",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
   },
   "scripts": {
     "build": "tsc",
