--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ OWNER=id
 NODE_ENV=production
 NOTIF_ANIME=false
 REDIS_URL=localhost:6379
+JELLYSTAT_URL=http://localhost:3000
+JELLYSTAT_TOKEN=token
+PROWLARR_URL=http://localhost:9696
+PROWLARR_TOKEN=token
