✨ Add " Dynamic AnimeSchedule"  - https://github.com/WaYyTempest/Requestarr/issues/5

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,4 @@ JELLYSTAT_URL=http://localhost:3000
 JELLYSTAT_TOKEN=token
 PROWLARR_URL=http://localhost:9696
 PROWLARR_TOKEN=token
+SCHEDULE_NOTIF=0 1 * * *
