Add new readme and add dynamic status

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,9 @@ JELLYSTAT_TOKEN=token
 PROWLARR_URL=http://localhost:9696
 PROWLARR_TOKEN=token
 SCHEDULE_NOTIF=0 1 * * *
+BOT_STATUS_DEV=idle
+BOT_STATUS_PROD=online
+BOT_ACTIVITY_DEV=🔧 Under Development | Please Check Back Later
+BOT_ACTIVITY_PROD=Self Hosted
+BOT_ACTIVITY_TYPE_DEV=Playing
+BOT_ACTIVITY_TYPE_PROD=Streaming
