--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,10 @@
     "strict": true,
     "alwaysStrict": true,
     "outDir": "dist",
+    "rootDir": "src",
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true
   },
   "include": ["src"],
   "exclude": ["dist/**/*", "node_modules/**/*"]
