--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -2,6 +2,7 @@ name: "💡 Feature Request"
 description: Suggest a new feature or improvement for this project.
 title: "💡 [FEAT] - <title>"
 labels: ["enhancement"]
+assignees: ["WaYyTempest"]
 body:
   - type: textarea
     id: feature
