Update package and improve example

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ JELLYSTAT_TOKEN=token
 PROWLARR_URL=http://localhost:9696
 PROWLARR_TOKEN=token
 SCHEDULE_NOTIF=0 1 * * *
+MOVIE_SCHEDULE_NOTIF=false
+SERIES_SCHEDULE_NOTIF=false
 BOT_STATUS_DEV=idle
 BOT_STATUS_PROD=online
 BOT_ACTIVITY_DEV=🔧 Under Development | Please Check Back Later
